added changes to background imgs

--- a/public_html/style.css
+++ b/public_html/style.css
@@ -13,5 +13,6 @@
 /*}*/
 
 .backgroundIMG {
+    background-image: url("./imgs/pwp-background-placeholder.png");
     background-color: transparent;
 }
