made some adjustments to margins, colors, borders, and fonts

--- a/public_html/style.css
+++ b/public_html/style.css
@@ -23,5 +23,11 @@
 
 .backgroundIMGSize {
     width: 100vw;
-    height: 75vh;
+    height: 65vh;
 }
+
+.highlight-text {
+    color: #52eef5;
+}
+
+
